# cpp-cmake-template

./: CMakeLists.txt  README.md
cmake/: ProjectDefaults.cmake  ProjectOptions.cmake
cmake/preset/: msvc2022.cmake  msvc2026.cmake  ninja.cmake
src/: main.cxx
